<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flight Capture</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="button_capture">Capture</string>
    <string name="title_activity_preview">Preview</string>
    <string name="editFrames">Number Of Frames:</string>
    <string name="editTime">Time Between Pics(ms):</string>
    <string name="editDist">Dist Between Pics(m):</string>
    <string name="defaultFrames">10</string>
    <string name="defaultTime">3000</string>
    <string name="defaultDist">1</string>
    <string name="cancel">Cancel</string>
    <string name="startTime">Start Time</string>
    <string name="startDist">Start Dist</string>
    <string name="snapPic">Snap Pic</string>
    <string name="readXOrient">Current X Orientation:</string>
    <string name="readYOrient">Current Y Orientation:</string>
    <string name="readZOrient">Current Z Orientation:</string>
    <string name="defaultOrient">0</string>
</resources>